--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "simple-line-icons": "^2.4.1",
     "sortablejs": "^1.10.2",
     "sweetalert2": "^8.13.4",
+    "sweetalert2-react": "^0.8.3",
     "sweetalert2-react-content": "^1.1.0"
   },
   "devDependencies": {
