--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
+    "react-player": "^2.0.1",
     "react-redux": "^7.1.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
