--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
-    "react-player": "^2.0.1",
+    "react-player": "^2.6.0",
     "react-redux": "^7.1.0",
     "react-router-config": "^5.0.0",
     "react-router-dom": "^5.0.0",
@@ -48,6 +48,7 @@
     "redux-persist": "^5.10.0",
     "simple-line-icons": "^2.4.1",
     "sortablejs": "^1.10.2",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^8.13.4",
     "sweetalert2-react": "^0.8.3",
     "sweetalert2-react-content": "^1.1.0"
